--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,9 +6,9 @@
     <BODY>
         <H1>States</H1>
         <UL>
-	  {% for state in states|sort(attribute='name') %}
-	  <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-	  {% endfor %}
-	</UL>
+	{% for key, value in state.items()|sort(attribute='1.name') %}
+             <LI>{{ value.id }}: <B>{{ value.name }}</B></LI>
+	{% endfor %}
+        </UL>
     </BODY>
 </HTML>
