--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-      {% if state_id and target == None %}
-        <H1>Not found!</H1>
-	{% elif not state_id %}
-	<H1>States</H1>
-        <UL>
-	  {% for s in states|sort(attribute='name') %}
-          <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
-	  {% endfor %}
-	</UL>
-	{% else %}
-	<H1>State: {{target.name}}</H1>
-	<H3>Cities:</H3>
-	<UL>
-	  {% for city in target.cities|sort(attribute='name') %}
-	  <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-	  {% endfor %}
-	</UL>
-	{% endif %}
-    </BODY>
+  <HEAD>
+    <TITLE>HBNB</TITLE>
+  </HEAD>
+  <BODY>
+    {% if states is not none %}
+    {% if cities is not none %}
+    <H1>State: {{ states }}</H1>
+    <H3>Cities:</H3>
+    <UL>
+      {% for city in cities|sort(attribute=1) %}
+      <LI>{{ city[0] }}: <B>{{ city[1] }}</B></LI>
+      {% endfor %}
+    </UL>
+    {% else %}
+    <H1>States</H1>
+    <UL>
+      {% for state in states|sort(attribute=1) %}
+      <LI>{{ state[0] }}: <B>{{ state[1] }}</B></LI>
+      {% endfor %}
+    </UL>
+    {% endif %}
+    {% else %}
+    <H1>Not found!</H1>
+    {% endif %}
+  </BODY>
 </HTML>
